<resources>
    <string name="app_name">ecommerce</string>
    <string name="sign_in">Sign In</string>
    <string name="email">email</string>
    <string name="daftar">Daftar</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="password">password</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="staff">Staff</string>
    <string name="sign_out">Sign Out</string>
    <string name="stock">Stock</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullname">Fullname</string>
    <string name="register_staff">Register Staff</string>
    <string name="profile_picture">profile picture</string>
    <string name="nama">Nama</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_product">Add Product</string>
    <string name="go_back">go back</string>
    <string name="upload_picture">upload picture</string>
    <string name="name_product">name product</string>
    <string name="kategori_product">Kategori Product</string>
    <string name="kategori_item">Kategori Item</string>
    <string name="filter_product">Filter Product</string>
    <string name="product_id">product Id</string>
    <string-array name="kategori_item">
        <item>Clothing</item>
        <item>Electronic</item>
        <item>Book</item>
        <item>other</item>
    </string-array>
    <string-array name="kategori_clothing">
        <item>T-Shirt</item>
        <item>Jacket</item>
        <item>Shorts</item>
        <item>Pants</item>
        <item>Other</item>
    </string-array>
    <string-array name="kategori_electonic">
        <item>Computer</item>
        <item>Smartphone</item>
    </string-array>
    <string-array name="filter_clothing">
        <item>Men</item>
        <item>Women</item>
    </string-array>
    <string name="title_activity_dashboard_user">DashboardUserActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="beranda">Home</string>
    <string name="pengaturan">Setting</string>
    <string name="product_newest">🔥 Produk Terbaru Hari ini</string>
</resources>