<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_admin"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_staff_admin"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/staff" />
        <item
            android:id="@+id/nav_stock_admin"
            android:icon="@drawable/ic_baseline_store_24"
            android:title="@string/stock" />

    </group>
    <item
        android:id="@+id/nav_signout"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/sign_out" />
</menu>