<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/profile_picture"
            android:id="@+id/staffpicture"
            android:padding="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/placeHolderInput"
                android:text="@string/nama"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fname"
                style="@style/input"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/placeHolderInput"
                android:text="@string/email"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                style="@style/input"
                />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>