<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    >

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:defaultFocusHighlightEnabled="true"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp">
        <TextView
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            style="@style/bigText_bold"/>

        <!--    field email -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="43dp"
            >

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:lineSpacingExtra="-3sp"
                android:text="@string/email"
                android:textAppearance="@style/placeHolderInput"
                android:layout_marginBottom="7dp"
                />
            <!--        input email-->
            <RelativeLayout
                android:layout_below="@+id/email"
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inputfield"
                >

                <EditText
                    android:id="@+id/input_email"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/frame_165"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:hint="name@email.com"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck"
                    android:importantForAutofill="no" />
            </RelativeLayout>
        </RelativeLayout>

        <!--    field password-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:lineSpacingExtra="-3sp"
                android:text="@string/password"
                android:textAppearance="@style/placeHolderInput"
                android:layout_marginBottom="7dp"
                />
            <!--        input email-->
            <RelativeLayout
                android:layout_below="@+id/password"
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inputfield"
                >

                <EditText
                    android:id="@+id/input_password"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/frame_165"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:hint="******"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />
            </RelativeLayout>
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_large"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun"
                android:lineSpacingExtra="4sp"
                android:translationY="-1.96sp"
                style="@style/smalltext"
                android:textAlignment="center"/>
            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                android:textAppearance="@style/daftar"
                android:lineSpacingExtra="4sp"
                android:translationY="-1.96sp"
                android:textAlignment="center"
                />
        </LinearLayout>
    </LinearLayout>




</RelativeLayout>