<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:defaultFocusHighlightEnabled="true"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up"
            style="@style/bigText_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <!--    field email -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:gravity="top"
                android:lineSpacingExtra="-3sp"
                android:text="@string/email"
                android:textAppearance="@style/placeHolderInput" />
            <!--        input email-->
            <RelativeLayout
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:background="@drawable/inputfield">

                <EditText
                    android:id="@+id/input_email"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/frame_165"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:hint="name@email.com"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />
            </RelativeLayout>
        </RelativeLayout>

        <!--    field password-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:gravity="top"
                android:lineSpacingExtra="-3sp"
                android:text="@string/password"
                android:textAppearance="@style/placeHolderInput" />
            <!--        input email-->
            <RelativeLayout
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:background="@drawable/inputfield">

                <EditText
                    android:id="@+id/input_password"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/frame_165"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:hint="******"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />
            </RelativeLayout>
        </RelativeLayout>
        <!--        field phone-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/phoneNumb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:gravity="top"
                android:lineSpacingExtra="-3sp"
                android:text="Phone"
                android:textAppearance="@style/placeHolderInput" />
            <!--        input email-->
            <RelativeLayout
                android:id="@+id/field_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneNumb"
                android:background="@drawable/inputfield">

                <EditText
                    android:id="@+id/input_phone"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/frame_165"
                    android:drawableStart="@drawable/ic_baseline_phone_24"
                    android:drawablePadding="10dp"
                    android:hint="*****"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />
            </RelativeLayout>
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_large"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
    </LinearLayout>
</RelativeLayout>